--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 									<h2>About me</h2>
 									<ul class="small-image-list">
 										<li>
-											<a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/desaimirant"><img src="images/pic2.jpg" alt="" class="left" /></a>
+											<a target="_blank" rel="noopener noreferrer" href="https://www.dropbox.com/scl/fi/cuvpe70knetno0675utgw/Mirant-Desai-Career-Profile?rlkey=v1k21v33ix12aspnosea1k97e&st=pnrrx1if&dl=0">img src="images/pic2.jpg" alt="" class="left" /></a>
 											<h4>Mirant Desai</h4>
 											<p>Finance and Strategy Consultant</p>
 										</li>
