--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 									</ul>
 									</p>
 									<footer class="controls">
-										<a target="_blank" rel="noopener noreferrer" href="" class="button">Login</a>
+										<a href="https://consulting-67369.bubbleapps.io" rel="noopener noreferrer" href="" class="button">Login</a>
 									</footer>
 								</section>
 
