--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 									<li>Go To Market Strategy and Market Sizing </li>
 									<li>Business Valuations </li>
 									<li>Startup Funding Documents</li>
-									<li><a target="_blank" rel="noopener noreferrer" href="https://mirant.shinyapps.io/Application/"></a>
-											Financial Forecasting </li>
+									<li><a target="_blank" rel="noopener noreferrer" href="https://mirant.shinyapps.io/Application/">
+											Financial Forecasting </a> </li>
 									<li>Project Management Office</li>
 									</ul>
 									</p>
