--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 									<h2>Welcome to my Strategy Practice!</h2>
 									<p>A list of solutions we can provide for new startups founders
 									<ul>
-									<li>Go To Market Strategy and Market Sizing </li>
+									<li><a target="_blank" rel="noopener noreferrer" href="https://mirant.shinyapps.io/strategy-analyzer/">
+											Strategy</a> </li>
 									<li>Business Valuations </li>
 									<li>Startup Funding Documents</li>
 									<li><a target="_blank" rel="noopener noreferrer" href="https://mirant.shinyapps.io/Application/">
