--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
 									<ul>
 									<li><a target="_blank" rel="noopener noreferrer" href="https://mirant.shinyapps.io/strategy-analyzer/">
 											Strategy</a> </li>
-									<li><a target="_blank" rel="noopener noreferrer" href="https://mirant.shinyapps.io/Valuations/">
-											Business Valuations </a> </li>
+									<li>Business Valuations</li>
 									<li>Startup Funding Documents</li>
 									<li><a target="_blank" rel="noopener noreferrer" href="https://mirant.shinyapps.io/Application/">
 											Financial Forecasting </a> </li>
