--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 									<ul>
 									<li><a target="_blank" rel="noopener noreferrer" href="https://mirant.shinyapps.io/strategy-analyzer/">
 											Strategy</a> </li>
-									<li>Business Valuations</li>
+									<li><a target="_blank" rel="noopener noreferrer" href="https://mirant.shinyapps.io/business-valuations/">
+											Business Valuations</a> </li>
 									<li>Startup Funding Documents</li>
 									<li><a target="_blank" rel="noopener noreferrer" href="https://mirant.shinyapps.io/Application/">
 											Financial Forecasting </a> </li>
