--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 									</ul>
 									</p>
 									<footer class="controls">
-										<a href="https://consulting-67369.bubbleapps.io" rel="noopener noreferrer" href="" class="button">Login</a>
+										<a href="https://mirant.shinyapps.io/dashboard/" rel="noopener noreferrer" href="" class="button">Login</a>
 									</footer>
 								</section>
 
