--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 							<div class="col-6 col-12-medium">
 
 								<article class="blog-post">
-									<h2>Just another blog post</h2>
+									<h2>Overview</h2>
 									
 									<a href="#"><img src="images/pic6.jpg" alt="" class="top blog-post-image" /></a>
 									<h3>Latest Readings</h3>
