--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
 											Strategy</a> </li>
 									<li><a target="_blank" rel="noopener noreferrer" href="https://mirant.shinyapps.io/business-valuations/">
 											Business Valuations</a> </li>
-									<li>Startup Funding Documents</li>
+									<li><a target="_blank" rel="noopener noreferrer" href="https://mirant.shinyapps.io/pitchdeck/">
+											Startup Funding Documents</a> </li>
 									<li><a target="_blank" rel="noopener noreferrer" href="https://mirant.shinyapps.io/Application/">
 											Financial Forecasting </a> </li>
-									<li>Project Management Office</li>
 									</ul>
 									</p>
 									<footer class="controls">
