--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
               <i class="bi bi-geo-alt flex-shrink-0"></i>
               <div>
                 <h3>Address</h3>
-                <p>702 SW 8th Street, Bentonville, AR, 72712</p>
+                <p>609 SW 8th Street, 6th Floor, Bentonville, AR, 72712</p>
               </div>
             </div><!-- End Info Item -->
 
