--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 
           </div>
 
-          <div class="col-lg-8">
+      <!--    <div class="col-lg-8">
             <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
 
@@ -370,7 +370,7 @@
 
               </div>
             </form>
-          </div><!-- End Contact Form -->
+          </div>  -- End Contact Form -->
 
         </div>
 
