--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                     </ul>
                   </div>
                   <div class="col-lg-6 order-1 order-lg-2 text-center">
-                    <img src="" alt="" class="img-fluid" loading="lazy">
+                    <img src="assets/img/pic6.jpg" alt="" class="img-fluid" loading="lazy">
                   </div>
                 </div>
               </div>
