--- a/index.html
+++ b/index.html
@@ -266,9 +266,7 @@
                       <li><i class="bi bi-check2-circle"></i> Change management and training</li>
                     </ul>
                   </div>
-                  <div class="col-lg-6 order-1 order-lg-2 text-center">
-                    <img src="" alt="" class="img-fluid" loading="lazy">
-                  </div>
+               <div style="position: relative; padding-bottom: 56.25%; height: 0;"><iframe id="js_video_iframe" src="https://jumpshare.com/embed/iW8Udlc301ZmXRONnByR" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
                 </div>
               </div>
 
