--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                   <div class="col-lg-6 order-2 order-lg-1">
                     <h3>Efficient Strategy Implementation</h3>
                     <p></p>
-<div style="position: relative; padding-bottom: 56.25%; height: 0;"><iframe id="js_video_iframe" src="https://jumpshare.com/embed/iW8Udlc301ZmXRONnByR" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
+ <div style="position: relative; padding-bottom: 56.25%; height: 0;"><iframe src="https://jumpshare.com/embed/iW8Udlc301ZmXRONnByR" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
                     <ul>
                       <li><i class="bi bi-check2-circle"></i> Project planning and management</li>
                       <li><i class="bi bi-check2-circle"></i> Resource allocation and team building</li>
