--- a/index.html
+++ b/index.html
@@ -239,7 +239,12 @@
                   <div class="col-lg-6 order-2 order-lg-1">
                     <h3>Comprehensive Market Analysis Solutions</h3>
                     <p>Market Analysis Solutions</p>
+<video controls width="250">
+  <source src="assets/img/2.webm" type="video/webm" />
 
+<!--  <source src="/media/cc0-videos/flower.mp4" type="video/mp4" /> -->
+
+</video>
                     <ul>
                       <li><i class="bi bi-check2-circle"></i> Consumer behavior research and insights</li>
                       <li><i class="bi bi-check2-circle"></i> Market segmentation and targeting</li>
