--- a/index.html
+++ b/index.html
@@ -220,7 +220,10 @@
                   <div class="col-lg-6 order-2 order-lg-1">
                     <h3>Strategic Business Planning &amp; Development</h3>
                     <p>Consultation for a range of business planning and development issues</p>
+<video controls width="250">
+  <source src="assets/img/3.webm" type="video/webm" />
 
+</video>
                     <ul>
                       <li><i class="bi bi-check2-circle"></i> Market research and competitive analysis</li>
                       <li><i class="bi bi-check2-circle"></i> Business model development and validation</li>
