--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                   <div class="col-lg-6 order-2 order-lg-1">
                     <h3>Strategic Business Planning &amp; Development</h3>
                     <p>Consultation for a range of business planning and development issues</p>
-<video controls width="250" autoplay loop muted>
+<video controls width="250">
   <source src="assets/img/3.webm" type="video/webm" />
 
 </video>
@@ -242,7 +242,7 @@
                   <div class="col-lg-6 order-2 order-lg-1">
                     <h3>Comprehensive Market Analysis Solutions</h3>
                     <p>Market Analysis Solutions</p>
-<video controls width="250" autoplay loop muted>
+<video controls width="250">
   <source src="assets/img/2.webm" type="video/webm" />
 
 <!--  <source src="/media/cc0-videos/flower.mp4" type="video/mp4" /> -->
@@ -266,7 +266,7 @@
                   <div class="col-lg-6 order-2 order-lg-1">
                     <h3>Efficient Strategy Implementation</h3>
                     <p></p>
-<video controls width="250" autoplay loop muted>
+<video controls width="250">
   <source src="assets/img/1.webm" type="video/webm" />
 
 <!--  <source src="/media/cc0-videos/flower.mp4" type="video/mp4" /> -->
