--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="col-lg-6 text-center" data-aos="fade-up" data-aos-delay="100">
             <h2>Welcome to my Strategy Practice!</h2>
 
-            <a href="https://mirant.shinyapps.io/dashboard/" class="btn-get-started">lOGIN</a>
+            <a href="http://3.84.145.200/" class="btn-get-started">lOGIN</a>
           </div>
         </div>
       </div>
